[package]
name = "mpl-bubblegum"
version = "0.11.0"
description = "NFT Compression"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
bytemuck = "1.13.0"
solana-program = "=1.14.22"
token_metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata", features = ["no-entrypoint"] }
num-traits = "0.2.15"
spl-account-compression = { git = "https://github.com/bridgesplit/solana-program-library", features = ["cpi"] }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }

[dev-dependencies]
async-trait = "0.1.71"
mpl-token-auth-rules = { version = "=1.4.3-beta.1", features = ["no-entrypoint"] }
solana-program-test = "=1.14.22"
solana-sdk = "=1.14.22"

